Change field author to date

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Story" ng-model="newsitem.story" class="form-control">
           </div>
           <div class="form-group">
-            <input type="text" placeholder="Author" ng-model="newsitem.author" class="form-control">
+            <input type="text" placeholder="Date" ng-model="newsitem.date" class="form-control">
           </div>
           <div class="form-group">
             <input type="text" placeholder="Image" ng-model="newsitem.image" class="form-control">
